--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <a href="painting/painting.html">XSLT Sample</a>
 
     </body>
 </html>
